--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@svgr/webpack": "^4.3.2",
     "@types/next": "^8.0.6",
     "@types/next-redux-wrapper": "^2.0.2",
     "@types/react": "^16.9.1",
@@ -13,10 +14,12 @@
     "@types/react-redux": "^7.1.1",
     "@zeit/next-stylus": "^1.0.1",
     "autoprefixer": "^9.6.1",
+    "dotenv": "^8.1.0",
     "immutable": "^4.0.0-rc.12",
     "next": "^9.0.3",
     "next-compose-plugins": "^2.2.0",
     "next-redux-wrapper": "^3.0.0-alpha.3",
+    "next-transpile-modules": "^2.3.1",
     "poststylus": "^1.0.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
