--- a/package.json
+++ b/package.json
@@ -9,25 +9,25 @@
     "@svgr/webpack": "^4.3.2",
     "@types/next": "^8.0.6",
     "@types/next-redux-wrapper": "^2.0.2",
-    "@types/react": "^16.9.1",
-    "@types/react-dom": "^16.8.5",
-    "@types/react-redux": "^7.1.1",
+    "@types/react": "^16.9.2",
+    "@types/react-dom": "^16.9.0",
+    "@types/react-redux": "^7.1.2",
     "@zeit/next-stylus": "^1.0.1",
     "autoprefixer": "^9.6.1",
     "dotenv": "^8.1.0",
     "immutable": "^4.0.0-rc.12",
-    "next": "^9.0.3",
+    "next": "^9.0.5",
     "next-compose-plugins": "^2.2.0",
-    "next-redux-wrapper": "^3.0.0-alpha.3",
+    "next-redux-wrapper": "^3.0.0",
     "next-transpile-modules": "^2.3.1",
     "poststylus": "^1.0.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-redux": "^7.1.0",
+    "react-redux": "^7.1.1",
     "redux-thunk": "^2.3.0",
-    "stylus": "^0.54.5",
+    "stylus": "^0.54.7",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "typescript": "^3.5.3"
+    "typescript": "^3.6.2"
   },
   "browserslist": [
     "last 5 version",
