--- a/package.json
+++ b/package.json
@@ -6,28 +6,28 @@
     "start": "next start"
   },
   "dependencies": {
-    "@svgr/webpack": "^4.3.3",
-    "@types/next": "^8.0.6",
-    "@types/next-redux-wrapper": "^2.0.2",
-    "@types/react": "^16.9.9",
-    "@types/react-dom": "^16.9.2",
-    "@types/react-redux": "^7.1.5",
+    "@svgr/webpack": "^5.1.0",
+    "@types/node": "^13.7.1",
+    "@types/react": "^16.9.19",
+    "@types/react-dom": "^16.9.5",
+    "@types/react-redux": "^7.1.7",
     "@zeit/next-stylus": "^1.0.1",
-    "autoprefixer": "^9.6.5n",
+    "autoprefixer": "^9.7.4",
     "dotenv": "^8.2.0",
     "immutable": "^4.0.0-rc.12",
-    "next": "^9.1.1",
+    "next": "^9.2.1",
     "next-compose-plugins": "^2.2.0",
     "next-redux-wrapper": "^4.0.1",
-    "next-transpile-modules": "^2.3.1",
+    "next-transpile-modules": "^3.0.2",
     "poststylus": "^1.0.0",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "react-redux": "^7.1.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "stylus": "^0.54.7",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "typescript": "^3.6.4"
+    "typescript": "^3.7.5"
   },
   "browserslist": [
     "last 5 version",
