--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
     "@types/react-redux": "^7.1.7",
+    "@types/ua-parser-js": "^0.7.33",
     "@zeit/next-stylus": "^1.0.1",
     "autoprefixer": "^9.7.4",
     "dotenv": "^8.2.0",
@@ -27,7 +28,8 @@
     "redux-thunk": "^2.3.0",
     "stylus": "^0.54.7",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "ua-parser-js": "^0.7.21"
   },
   "browserslist": [
     "last 5 version",
