--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "^9.2.1",
     "next-compose-plugins": "^2.2.0",
     "next-redux-wrapper": "^4.0.1",
+    "next-seo": "^4.5.0",
     "next-transpile-modules": "^3.0.2",
     "poststylus": "^1.0.0",
     "react": "^16.12.0",
